# advent-of-code-2023

01/: main.hs
02/: main.hs
03/: Main.hs  day03.cabal  main.hs
04/: chatgpt.hs  main.hs
05/: Main.hs  x05.cabal
06/: Main.hs  day06.cabal
07/: Main.hs  day07.cabal
08/: Main.hs  day08.cabal
09/: Main.hs  day09.cabal
10/: Main.hs  day10.cabal
11/: Main.hs
12/: Main.hs  day12.cabal
13/: Main.hs  day13.cabal
14/: Main.hs  day14.cabal
15/: Main.hs  day15.cabal
16/: Main.hs  day16.cabal
17/: Main.hs  day17.cabal
