cabal-version:      3.0
name:               day03
version:            0.1.0.0
build-type:         Simple

common warnings
    --ghc-options: -Wall -Wextra

executable aoc
    import:           warnings
    main-is:          Main.hs
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      containers,
                      matrix,
                      megaparsec,
                      mtl,
                      split,
                      text
    hs-source-dirs:   .
    default-language: Haskell2010
