cabal-version:      3.0
name:               day06
version:            0.1.0.0
build-type:         Simple

common warnings
    --ghc-options: -Wall -Wextra

executable x05
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      containers,
                      megaparsec
    hs-source-dirs:   .
    default-language: Haskell2010
