cabal-version:      3.0
name:               day10
version:            0.1.0.0
build-type:         Simple

common warnings
    --ghc-options: -Wall -Wextra

executable aoc
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    array,
                      base ^>=4.17.2.1,
                      containers,
                      megaparsec
    hs-source-dirs:   .
    default-language: Haskell2010
